[package]
name = "cotoxy"
version = "0.1.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A TCP proxy using Consul for service discovery"
homepage = "https://github.com/sile/cotoxy"
repository = "https://github.com/sile/cotoxy"
readme = "README.md"
keywords = ["consul", "proxy", "tcp"]
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.10.0"
fibers = "0.1"
futures = "0.1"
log = "0.4.20"
miasht = "0.0"
serde = { version = "1", features = ["derive"] }
serdeconv = "0.4"
trackable = "1"
url = "1"
